Mon Apr 23 05:31:03 CDT 2001 Adam Heath <doogie@debian.org>

  * split/info.c: Change format string, to handle size_t.

Mon Apr 23 04:45:23 CDT 2001 Adam Heath <doogie@debian.org>

  * main/main.c: s/--no-debsign/--no-debsig/ in help.

Mon Apr 23 03:21:10 CDT 2001 Adam Heath <doogie@debian.org>

  * dpkg-deb/{build,extract,main}.c, split/{info,join,main,queue}.c,
    split/dpkg-split.h, lib/{dump,ehandle,fields,mlib,parse{,help},varbuf,
    vercmp}.c, lib/parsedump.h, main/{archives,configure,enquiry,filesdb,
    help,main,packages,processarc,remove}.c, main/{filesdb,main}.h,
    utils/{md5sum, start-stop-daemon}.c, dselect/pkg{list.cc,list.hh,
    top.cc}, include/dpkg{-db.h,.h.in}: Fixed up several warning types.
    const, casting, incorrect sizes, signed/unsigned comparisons.

Mon Apr 23 02:17:26 CDT 2001 Adam Heath <doogie@debian.org>

  * dpkg-deb/info.c, main/processarc.c: Add comments telling why we
    use tempnam() and tmpnam().

Sun Apr 22 23:59:00 CDT 2001 Adam Heath <doogie@debian.org>

  * archtable: Added alphaev67-linux-gnu.

Sun Apr 22 19:02:12 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/parse.c: s/PARSE_MMAP/HAVE_MMAP/, so that we now use mmap
    to read status and available(and like files).

Sun Apr 22 18:32:02 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/parse.c: Fix another segfault when parsing single-paragraph
    files(ie, tmp.ci/control).

Sun Apr 22 17:13:17 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/filesdb.c: fix putat logic we broke earlier today

Sun Apr 22 16:42:22 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/filesdb.c: don't read a statoverride or .list file if they
    are 0 bytes

Sun Apr 22 15:15:56 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/help.c: ensure_package_clientdata() only needs to allocate memory
    for a perpackagestate struct, not a pkginfoperfile.

Sun Apr 22 02:46:06 CDT 2001 Adam Heath <doogie@debian.org>
