@@ -1,3 +1,7 @@
+Mon Apr 23 06:25:36 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/extract.c: More %z format fixes.
+
 Mon Apr 23 05:31:03 CDT 2001 Adam Heath <doogie@debian.org>
 
   * split/info.c: Change format string, to handle size_t.
